# libsig

./: CMakeLists.txt  LICENSE  README  bench.cc  test.cc  test.inc
.github/workflows/: test.yml
cmake/: cflags.cmake  win32-bindir.cmake
include/: sig.hh
